2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcheckbutton.c
	* gtk/gtkdialog.c
	* gtk/gtkentry.c
	* gtk/gtkrange.c
	* gtk/gtktextbuffer.c
	* gtk/gtktextview.c
	* gtk/gtkwidget.c: Silence compiler warnings.

2006-03-06  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Merge from GNOME CVS.

    2005-05-03  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkdialog.h:
	* gtk/gtkdialog.c (gtk_dialog_get_response_for_widget):
	Make this function public.  (#170748, Morten Welinder)

2006-03-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/gdkproperty.h (gdk_atom_intern_static_string):
	* gtk/gtkintl.h (I_(string)): Provide source compatible versions as
	macros to reduce porting effort.

    2005-03-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkprivate.h: Define macros GTK_PARAM_READABLE,
	GTK_PARAM_WRITABLE, GTK_PARAM_READWRITE which are like
	their G_ counterparts, but also mark the name, nick
	and blurb as static.

2006-02-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkbutton.c (:keyboard-button): Remove obsolete VKB specific
	hack.

2006-02-23  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_rows_reordered):
	Make sure we always update the virtual root, also when ->priv->root
	is still NULL.  (Markku Vire)
	N#22651

2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gdk/x11/gdkwindow-x11.c (set_wm_name, gdk_window_set_title,
	gdk_window_set_icon_name): Set non-UTF-8 legacy WM hints only if
	ENABLE_ICCCM_LEGACY is defined. Avoids needlessly loading iconv as it
	wastes quite a bit of memory for no benefit.

2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* */*.c: Add missing Since: tags for custom additions

2006-02-22  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merge from GNOME CVS. Improves things for GtkFileSystemMemory a bit.

    2006-01-15  Kristian Rietveld  <kris@gtk.org>

	Fixes #324099, Tommi Komulainen.
