@@ -1,5 +1,12 @@
 2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
+	* gtk/gtktoolbutton (gtk_tool_button_construct_contents): If the
+	toolbar mode is ICONS and there is no icon set then show the label,
+	and vice versa (#322019)
+	M#353, N#23669
+
+2006-03-07  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
 	* gtk/gtkcheckbutton.c
 	* gtk/gtkdialog.c
 	* gtk/gtkentry.c
